--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 /* body {
@@ -60,7 +59,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: -1; 
+    z-index: -1;
     overflow: hidden;
 }
 
@@ -75,21 +74,23 @@ body::before {
 }
 
 
-.top-right-menu{
+.top-right-menu {
     width: calc(100% - 250px);
     display: flex;
     min-height: 60px;
     align-items: center;
     justify-content: center;
 }
-.top-right-menu .veltext{
+
+.top-right-menu .veltext {
     font-family: "Roboto", sans-serif;
     font-size: 24px;
     font-weight: 600;
     color: rgba(0, 0, 0, 1);
     padding-left: 20px;
 }
-.top-right-menu .search{ 
+
+.top-right-menu .search {
     height: 48px;
 }
 
@@ -106,7 +107,7 @@ input::-ms-input-placeholder {
     color: #000000;
 }
 
-.top-right-menu .search .input-group{ 
+.top-right-menu .search .input-group {
     height: 48px;
     border-radius: 16px;
     background: rgba(255, 255, 255, 1);
@@ -114,16 +115,18 @@ input::-ms-input-placeholder {
     border: none;
     /* border: 2px solid gray; */
 }
-.top-right-menu .search .input-group-text{ 
+
+.top-right-menu .search .input-group-text {
     background: transparent;
     border: none;
     padding: 0;
     padding-left: 15px;
 }
-.top-right-menu .search input{ 
+
+.top-right-menu .search input {
     background: transparent;
     border: none;
-    padding-left:15px ;
+    padding-left: 15px;
     color: #A0A0A0;
     z-index: 1;
     width: calc(100% - 38px);
@@ -132,51 +135,67 @@ input::-ms-input-placeholder {
     font-family: "Inter", sans-serif;
     letter-spacing: .5px;
 }
+
 .top-right-menu .search input:focus,
-.top-right-menu .search input:focus-visible{
+.top-right-menu .search input:focus-visible {
     border: none;
     box-shadow: none;
     outline: none;
     outline: -webkit-focus-ring-color auto 0px;
 }
-::-webkit-input-placeholder { /* WebKit, Blink, Edge */
-    color:    #fff;
-}
-:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-   color:    #fff;
-   opacity:  1;
-}
-::-moz-placeholder { /* Mozilla Firefox 19+ */
-   color:    #fff;
-   opacity:  1;
-}
-:-ms-input-placeholder { /* Internet Explorer 10-11 */
-   color:    #fff;
-}
-::-ms-input-placeholder { /* Microsoft Edge */
-   color:    #fff;
+
+::-webkit-input-placeholder {
+    /* WebKit, Blink, Edge */
+    color: #fff;
 }
 
-::placeholder { /* Most modern browsers support this now. */
-   color:    #fff;
+:-moz-placeholder {
+    /* Mozilla Firefox 4 to 18 */
+    color: #fff;
+    opacity: 1;
 }
-.top-right-menu .leftdrop{
+
+::-moz-placeholder {
+    /* Mozilla Firefox 19+ */
+    color: #fff;
+    opacity: 1;
+}
+
+:-ms-input-placeholder {
+    /* Internet Explorer 10-11 */
+    color: #fff;
+}
+
+::-ms-input-placeholder {
+    /* Microsoft Edge */
+    color: #fff;
+}
+
+::placeholder {
+    /* Most modern browsers support this now. */
+    color: #fff;
+}
+
+.top-right-menu .leftdrop {
     display: flex;
     align-items: center;
 }
-.top-right-menu .leftdrop .notification{
+
+.top-right-menu .leftdrop .notification {
     position: relative;
     height: 30px;
     width: 30px;
     margin-right: 20px;
 }
-.top-right-menu .leftdrop .notification img{
-    min-height:24px ;
-    max-height:24px ;
-    min-width:24px ;
-    max-width:24px ;
+
+.top-right-menu .leftdrop .notification img {
+    min-height: 24px;
+    max-height: 24px;
+    min-width: 24px;
+    max-width: 24px;
 }
-.top-right-menu .leftdrop .notification span{
+
+.top-right-menu .leftdrop .notification span {
     display: block;
     width: 14px;
     height: 14px;
@@ -191,93 +210,149 @@ input::-ms-input-placeholder {
     right: 3px;
     color: #fff;
 }
-.top-right-menu .leftdrop .mass{
+
+.top-right-menu .leftdrop .mass {
     position: relative;
     height: 30px;
     width: 30px;
     margin-right: 20px;
 }
-.top-right-menu .leftdrop .mass img{
-    min-height:30px ;
-    max-height:30px ;
-    min-width:30px ;
-    max-width:30px ;
+
+.top-right-menu .leftdrop .mass img {
+    min-height: 30px;
+    max-height: 30px;
+    min-width: 30px;
+    max-width: 30px;
 }
-.top-right-menu .leftdrop .user{
+
+.top-right-menu .leftdrop .user {
     position: relative;
     height: 46px;
     width: 46px;
     border-radius: 46px;
 }
-.top-right-menu .leftdrop .user img{
-    height:46px ;
-    width:100% ;
+
+.top-right-menu .leftdrop .user img {
+    height: 46px;
+    width: 100%;
 }
 
 
-.sidemenu{
+.sidemenu {
     width: 250px;
     float: left;
-    height:calc(100vh - 100px);
+    height: calc(100vh - 100px);
     margin-top: 87px;
     margin-left: 48px;
     padding-top: 20px;
 }
-.sidemenu ul{
+
+.sidemenu ul {
     margin: 0;
     padding: 0;
-    height: 100%;  
-    display: flex; 
+    height: 100%;
+    display: flex;
     flex-direction: column;
     padding-top: 20px;
     list-style-type: none;
-    
+
 }
-.sidemenu ul li{
+
+.sidemenu ul li {
     width: 100%;
     margin: 5px 0px;
 }
-.sidemenu ul li a{
-   display: block;
-   border-radius: 16px;
-   padding: 16px 16px;
-   font-size: 18px;
-   color: black;
-   font-weight: 500;
-   text-decoration: none;
+
+.sidemenu ul li a {
+    display: block;
+    border-radius: 16px;
+    padding: 16px 16px;
+    font-size: 18px;
+    color: black;
+    font-weight: 500;
+    text-decoration: none;
 }
-.sidemenu ul li a:hover{
+
+.sidemenu ul li a:hover {
     background: #1c1f25;
     color: white;
 }
+
 .sidemenu ul li a:hover img {
-    filter: invert(1); /* Change SVG color to white on hover */
+    filter: invert(1);
+    /* Change SVG color to white on hover */
 }
 
 
-.sidemenu ul li a.active{
+.sidemenu ul li a.active {
     /* background: linear-gradient(101.05deg, #1F8EBE -5.36%, #440495 29.46%, #440495 56.03%, #B102CD 81.92%); */
     background: rgba(25, 27, 32, 1);
     color: white;
 }
-.sidemenu ul li a img{
+
+.sidemenu ul li a img {
     width: 24px;
     min-height: 24px;
     max-height: 24px;
     max-width: 24px;
     max-width: 24px;
     margin-right: 20px;
- }
+}
 
-.main-container{
+.main-container {
     width: calc(100% - 250px);
     float: left;
     padding: 20px;
     margin-top: 70px;
     margin-left: 261px;
 }
-.top-data{
-    /* opacity: 60%; */
+
+.top-data {
+    background: rgba(255, 255, 255, 1);
+    border-radius: 12px;
+    padding: 20px 30px 0 30px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.state-value {
+    display: flex;
+    align-items: center;
+    padding-bottom: 20px;
+}
+
+.state-value .icon {
+    width: 40px;
+    height: 40px;
+    border-radius: 30%;
+    margin-right: 20px;
+    background: #e0e0e0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.state-value .icon img {
+    width: 60%;
+    height: auto;
+}
+
+.state-value .valume p {
+    font-size: 14px;
+    font-weight: 400;
+    color: rgba(0, 0, 0, 1);
+    margin-bottom: 4px;
+}
+
+.state-value .valume h1 {
+    font-size: 18px;
+    font-weight: 700;
+    color: rgba(0, 0, 0, 1);
+    margin-bottom: 0;
+}
+
+
+/* .top-data{
     background: rgba(255, 255, 255, 1);
     border-radius: 12px;
     padding: 20px 30px 0 30px;
@@ -294,6 +369,7 @@ input::-ms-input-placeholder {
     height:40px ;
     border-radius: 14px;
     margin-right: 20px;
+    background:#e0e0e0;
 }
 .state-value .icon img{
     width: 100%;
@@ -309,7 +385,10 @@ input::-ms-input-placeholder {
     font-weight: 700;
     color: rgba(0, 0, 0, 1);
     margin-bottom: 0;
-}
+} */
+
+
+/* fundallocation csss */
 
 .fundallocation {
     background: rgba(255, 255, 255, 1);
@@ -337,22 +416,22 @@ input::-ms-input-placeholder {
 }
 
 .findlist .fundimg .imge1 {
-   width: 32px;
-   height: 32px;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   text-align: center;
-   margin-right: 10px;
-   border-radius: 50%; 
-   background: #e0e0e0;
+    width: 32px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-right: 10px;
+    border-radius: 50%;
+    background: #e0e0e0;
 }
 
 .findlist .fundimg .imge1 img {
-   width: 80%; 
-   height: auto;
-   max-height: 100%;
-   border-radius: 50%;
+    width: 80%;
+    height: auto;
+    max-height: 100%;
+    border-radius: 50%;
 }
 
 .findlist .fundimg .name {
@@ -369,7 +448,7 @@ input::-ms-input-placeholder {
 }
 
 .findlist .progressbar {
-    margin-top: 12px;    
+    margin-top: 12px;
     position: relative;
 }
 
@@ -380,7 +459,8 @@ input::-ms-input-placeholder {
 }
 
 .findlist .progressbar .progress .progress-bar {
-    background: #774F81;
+    background: #e0e0e0;
+    
 }
 
 .findlist .progressbar span {
@@ -461,14 +541,17 @@ input::-ms-input-placeholder {
 } */
 
 
-.viewall{
-    background:rgba(0, 0, 0, 1);
+.viewall {
+    background: rgba(0, 0, 0, 1);
     font-weight: 500;
     color: #fff;
     border-radius: 12px;
     text-align: center;
 }
-.viewall:hover,.viewall:focus,.viewall:active{
+
+.viewall:hover,
+.viewall:focus,
+.viewall:active {
     background-color: #353434 !important;
     background: #353434 !important;
     color: #fff !important;
@@ -476,18 +559,20 @@ input::-ms-input-placeholder {
 }
 
 
-.cardcustom{
+.cardcustom {
     /* background: #353434 ; */
     border-radius: 12px;
     /* border: 1px solid transparent; */
     overflow: hidden;
     position: relative;
 }
-.cardcustom:hover{
+
+.cardcustom:hover {
     /* border: 20px solid #fff; */
     cursor: pointer;
 }
-.cardcustom .card-body::after{
+
+.cardcustom .card-body::after {
     content: '';
     /* background:red; */
     /* opacity: 20%; */
@@ -498,12 +583,14 @@ input::-ms-input-placeholder {
     top: 0;
     left: 0;
 }
-.cardcustom .card-body img{
+
+.cardcustom .card-body img {
     transition: transform .2s;
-    
+
 }
-.cardcustom:hover .card-body img{
-    
+
+.cardcustom:hover .card-body img {
+
     transform: scale(1.1);
 }
 
@@ -522,30 +609,35 @@ img {
 }
 
 
-.cardcustom .card-footer{
+.cardcustom .card-footer {
     /* background: rgba(255, 255, 255, 1); */
     padding: 15px;
     color: #fff;
     font-weight: 500;
     z-index: 1;
 }
-.cardcustom .card-footer span{
+
+.cardcustom .card-footer span {
     color: #B001CD;
 }
-.chartmain{
+
+.chartmain {
     background: rgba(255, 255, 255, 1);
     border-radius: 16px;
     padding: 20px 40px;
 }
-.top-menu{
+
+.top-menu {
     top: 30px;
-    padding-left: 40px ;
+    padding-left: 40px;
     padding-right: 40px;
 }
-.navbar-toggler-icon{
-    background-image:url(../src/assets/images/bar.svg);
+
+.navbar-toggler-icon {
+    background-image: url(../src/assets/images/bar.svg);
 }
-.top-menu.scrolled{
+
+.top-menu.scrolled {
     backdrop-filter: blur(20px);
     background: #f4eded6e;
     /* background: #f4eded; */
@@ -553,157 +645,225 @@ img {
     padding-top: 30px;
     padding-bottom: 30px;
 }
-.mobs{display: none;}
+
+.mobs {
+    display: none;
+}
 
 @media (max-width: 1366px) {
-    body{
+    body {
         padding: 40px 20px;
     }
-    .findlist .fundimg .name{
+
+    .findlist .fundimg .name {
         font-size: 14px;
     }
-    .findlist .fundimg .amount{
+
+    .findlist .fundimg .amount {
         font-size: 14px;
     }
-    .findlist .fundimg .imge1{
+
+    .findlist .fundimg .imge1 {
         width: 24px;
         height: 24px;
     }
-    .sidemenu{
+
+    .sidemenu {
         width: 215px;
     }
-    .main-container{
+
+    .main-container {
         width: calc(100% - 215px);
         margin-left: 228px;
         padding: 0 20px 20px 20px;
     }
-    .top-menu{
+
+    .top-menu {
         top: 20px;
         padding-left: 20px;
         padding-right: 20px;
     }
-    .sidemenu{
+
+    .sidemenu {
         margin-top: 87px;
         margin-left: 28px;
     }
 }
+
 @media (max-width: 1199px) {
-    .top-right-menu .veltext{
+    .top-right-menu .veltext {
         padding-left: 0;
     }
-    .sidemenu{
+
+    .sidemenu {
         width: 58px;
     }
-    .sidemenu ul li a span{
+
+    .sidemenu ul li a span {
         display: none;
     }
-    .main-container{
+
+    .main-container {
         width: calc(100% - 90px);
         padding: 20px 0px 20px 20px;
         margin-left: 84px;
     }
-    .webs{display: none;}
-    .mobs{display: inline-block;}
-    .top-right-menu{width: calc(100% - 90px);}
-    .top-right-menu .search .input-group{
+
+    .webs {
+        display: none;
+    }
+
+    .mobs {
+        display: inline-block;
+    }
+
+    .top-right-menu {
+        width: calc(100% - 90px);
+    }
+
+    .top-right-menu .search .input-group {
         min-width: 268px;
     }
-  }
+}
+
 @media (max-width: 1023px) {
-   body{ padding: 20px;}
-   .state-value{
-    display: block;
-    text-align: center;
+    body {
+        padding: 20px;
+    }
+
+    .state-value {
+        display: block;
+        text-align: center;
+    }
+
+    .state-value .icon {
+        margin: 0 auto 10px;
+
+    }
 }
-.state-value .icon{
-    margin:0 auto 10px;
-    
-}
-  }
+
 @media (max-width: 991px) {
-    body::after{
+    body::after {
         right: 0;
     }
-    .top-right-menu .veltext{display: none;}
-  }
+
+    .top-right-menu .veltext {
+        display: none;
+    }
+}
+
 @media (max-width: 757px) {
-    .state-value .valume h1{
+    .state-value .valume h1 {
         font-size: 18px;
     }
-    .state-value .valume p{
+
+    .state-value .valume p {
         font-size: 12px;
     }
+
     .state-value .icon {
         width: 40px;
         height: 40px;
     }
-   
-  }
+
+}
+
 @media (max-width: 575px) {
-    .sidemenu{
+    .sidemenu {
         margin-left: 10px;
         width: 250px;
-        background: #171617;
+        /* background: #171617; */
+        backdrop-filter: blur(20px);
+        background: #f4eded6e;
         overflow-y: auto;
         display: none;
     }
-    .sidemenu.active{display: block;}
-    .top-menu{
+
+    .sidemenu.active {
+        display: block;
+    }
+
+    .top-menu {
         padding-left: 10px;
         padding-right: 10px;
     }
+
     .top-right-menu {
         width: calc(100% - 59px);
     }
+
     .top-right-menu .search .input-group {
         min-width: 158px;
     }
-    .state-value{
+
+    .state-value {
         display: block;
         text-align: center;
     }
-    .state-value .icon{
-        margin:0 auto 10px;
-        
+
+    .state-value .icon {
+        margin: 0 auto 10px;
+
     }
-    .main-container{
+
+    .main-container {
         width: 100%;
         margin-left: 0px;
         padding: 20px 0px 20px 0px;
     }
-    .top-data{
+
+    .top-data {
         padding: 15px 15px 0 15px;
     }
-    .chartmain{
+
+    .chartmain {
         padding: 20px 15px;
     }
-    .sidemenu ul li a span{
-        display: inline;       
+
+    .sidemenu ul li a span {
+        display: inline;
     }
-.clchn{
-    z-index: 100000;
-    position: fixed;
-    top: 45px;
-    left: 58px;
+
+    .clchn {
+        z-index: 100000;
+        position: fixed;
+        top: 45px;
+        left: 58px;
+        backdrop-filter: blur(20px);
+        background: #f4eded6e;
+        border: none;
+        margin-top: -3px;
+    }
+
+    .clchn:hover {
+        background-color: #8b88886e;
+    }
+
+    .top-menu.scrolled {
+        padding-top: 28px;
+        padding-bottom: 25px;
+    }
 }
-.top-menu.scrolled {
-    padding-top: 28px;
-    padding-bottom: 25px;
-}
-  }
-  @media (max-width: 400px) {
-    .state-value .valume h1{
+
+@media (max-width: 400px) {
+    .state-value .valume h1 {
         font-size: 14px;
     }
-  }
+}
 
 
-  /* Hide the default Bootstrap dropdown caret */
+/* Hide the default Bootstrap dropdown caret */
 .btn-group .dropdown-toggle::after {
     display: none;
 }
 
 /* Optional: Add padding or styling to adjust for the missing caret */
 .btn-group .dropdown-toggle {
-    padding-right: 8px; /* Adjust if needed */
+    padding-right: 8px;
+
+}
+
+.btn-group .dropdown-menu {
+    border: none;
+    border-radius: 12px;
 }
