--- a/src/style.css
+++ b/src/style.css
@@ -237,7 +237,7 @@ input::-ms-input-placeholder {
     width: 100%;
 }
 
-
+/* 
 .sidemenu {
     width: 250px;
     float: left;
@@ -280,15 +280,15 @@ input::-ms-input-placeholder {
 
 .sidemenu ul li a:hover img {
     filter: invert(1);
-    /* Change SVG color to white on hover */
 }
 
 
 .sidemenu ul li a.active {
-    /* background: linear-gradient(101.05deg, #1F8EBE -5.36%, #440495 29.46%, #440495 56.03%, #B102CD 81.92%); */
     background: rgba(25, 27, 32, 1);
     color: white;
+    filter: invert(0);
 }
+
 
 .sidemenu ul li a img {
     width: 24px;
@@ -297,7 +297,76 @@ input::-ms-input-placeholder {
     max-width: 24px;
     max-width: 24px;
     margin-right: 20px;
+} */
+
+
+.sidemenu {
+    width: 250px;
+    float: left;
+    height: calc(100vh - 100px);
+    margin-top: 87px;
+    margin-left: 48px;
+    padding-top: 20px;
 }
+
+.sidemenu ul {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 20px;
+    list-style-type: none;
+}
+
+.sidemenu ul li {
+    width: 100%;
+    margin: 5px 0px;
+}
+
+.sidemenu ul li a {
+    display: block;
+    border-radius: 16px;
+    padding: 16px 16px;
+    font-size: 18px;
+    color: black;
+    font-weight: 500;
+    text-decoration: none;
+    transition: color 0.3s, background 0.3s;
+}
+
+.sidemenu ul li a img {
+    width: 24px;
+    min-height: 24px;
+    max-height: 24px;
+    margin-right: 20px;
+    transition: filter 0.3s;
+}
+
+.sidemenu ul li a:hover {
+    background: #1c1f25;
+    color: white;
+}
+
+.sidemenu ul li a:hover img {
+    filter: invert(1); 
+}
+
+.sidemenu ul li a.active {
+    background: rgba(25, 27, 32, 1);
+    color: white;
+}
+
+.sidemenu ul li a.active img {
+    filter: invert(1); 
+}
+
+.sidemenu ul li a.active:hover img {
+    filter: invert(1); /* Keep the icon white when hovered */
+}
+
+
+
 
 .main-container {
     width: calc(100% - 250px);
@@ -866,4 +935,22 @@ img {
 .btn-group .dropdown-menu {
     border: none;
     border-radius: 12px;
+    width: 250px;
+    height: 250px;
 }
+
+.notification-count {
+    margin-left: 20px;
+  }
+  
+  .notification-title {
+    display: block;
+    margin-left: 20px;
+    margin-top: 10px;
+  }
+  
+  .notification-divider {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  
