--- a/src/style.css
+++ b/src/style.css
@@ -332,7 +332,8 @@ input::-ms-input-placeholder {
     color: black;
     font-weight: 500;
     text-decoration: none;
-    transition: color 0.3s, background 0.3s;
+    transition: color 0.3s,
+     background 0.3s;
 }
 
 .sidemenu ul li a img {
