--- a/src/style.css
+++ b/src/style.css
@@ -48,7 +48,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #8c8989;
+    background-color: #0f0e0e;
     opacity: 0.09;
     z-index: -2;
 }
